--- a/style.css
+++ b/style.css
@@ -181,6 +181,61 @@ h3 {
     bottom: 10px;
   }
 
+  #rulesButton{
+    position: absolute;
+    left: 2%;
+    top: 2%;
+    margin: auto;
+    border-radius: 20px;
+  }
+
+  .rulesContainer{
+    position: absolute;
+    z-index: 15;
+    background-color: #333;
+    column-gap: 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .exaple{
+    display: flex;
+    font-size: 30px;
+    margin: 0;
+  }
+
+  .LetterGreen{
+    background-color: rgb(36, 148, 36)
+  }
+
+  .LetterGrey{
+    background-color: rgb(85, 85, 85);
+  }
+
+  .LetterYellow {
+    background-color: rgb(196, 196, 29);
+  }
+
+  .LetterRed {
+    background-color: red;
+  }
+
+  .rulesList{
+    
+    font-size: 20px;
+  }
+
+  .buttonExit {
+    position: absolute;
+    top: 10px;
+    right: 2%;
+    
+  }
+
 /* smaller screen css */
   @media screen and (max-width: 768px) {
 
